--- a/css/fondo.css
+++ b/css/fondo.css
@@ -1,6 +1,6 @@
 body{
     margin: auto;
-    background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.owenatvs.co.uk%2Fquad-bikes-compact-tractors&psig=AOvVaw3p9mHuuA6Df4OLF1IYmrFV&ust=1636519327846000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCIiX0t67ivQCFQAAAAAdAAAAABAJ);
+    background-image: url(https://media.istockphoto.com/photos/tough-terrain-for-a-tough-man-picture-id1074619472?k=20&m=1074619472&s=612x612&w=0&h=oJekCchSODgONxEb_PdO2xqRlTIukTSJInHpVYCZF5o=);
     background-size: 100%;
     padding: 60px;
 }
